--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,14 @@ version: '3'
 services:
   db:
     image: postgres:latest
-    environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 2312
+    env_file:
+      - .env
     ports:
       - "5432:5432"
+  redis:
+    image: redis
+    env_file:
+      - .env
+    ports: 
+      - 6379:6379
+    
