--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,15 @@ services:
     env_file:
       - .env
     ports:
-      - "5432:5432"
+      - '5432:5432'
   redis:
+    container_name: cache
     image: redis
-    env_file:
-      - .env
-    ports: 
+    ports:
       - 6379:6379
-    
+    volumes:
+      - redis:/data
+
+volumes:
+  redis:
+    driver: local
