--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^5.3.2",
-    "cache-manager-redis-store": "^3.0.1",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
@@ -51,6 +51,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
