--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,24 @@ services:
     ports:
       - '5432:5432'
   redis:
-    container_name: cache
-    image: redis
+    image: redis:latest
     ports:
       - 6379:6379
     volumes:
       - redis:/data
- 
-
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.3
+    environment:
+      - discovery.type=single-node
+    ports:
+      - '9200:9200'
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
 
 volumes:
   redis:
+    driver: local
+  esdata:
+    driver: local
+  db: 
     driver: local
