--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,26 @@ services:
       - redis:/data
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.11.3
+    container_name: elasticsearch
     environment:
-      - discovery.type=single-node
-    ports:
-      - '9200:9200'
+      - node.name=elasticsearch
+      - http.port=9200
+      - http.host=0.0.0.0
+      - transport.host=127.0.0.1
+      - cluster.name=es-docker-cluster
+      - discovery.seed_hosts=elasticsearch
+      - cluster.initial_master_nodes=elasticsearch
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
     volumes:
       - esdata:/usr/share/elasticsearch/data
-
+    ports:
+      - "9200:9200"
+  
 volumes:
   redis:
     driver: local
